objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>ASCO_RSVP_Page_Viewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASCO RSVP Page Viewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASCO_Reception_RSVP__c</fullName>
        <label>ASCO Reception RSVP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Clicks__c</fullName>
        <label>Total Clicks</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Opens__c</fullName>
        <label>Total Opens</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>